Proyecto Angular Actualizado, crud completo en productos y clientes

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,7 +5,7 @@
 
         <div class="mt-4">
             <a routerLink="/productos" class="btn btn-primary btn-lg me-3 btn-gradient" routerLinkActive="router-link-active">Comprar</a>
-            <a routerLink="/admin" class="btn btn-success btn-lg btn-gradient">Administrar</a>
+            <a routerLink="/admin" class="btn btn-success btn-lg btn-gradient" routerLinkActive="router-link-active">Administrar</a>
         </div>
     </div>
 </div>
