Proyecto Angular Actualizado, crud completo en productos y clientes

--- a/src/app/components/clientes/clientes.component.html
+++ b/src/app/components/clientes/clientes.component.html
@@ -58,7 +58,7 @@
         </div>
   
         <div class="col-md-6">
-          <label for="email" class="form-label text-primary">Latitud</label>
+          <label for="email" class="form-label text-primary">Correo</label>
           <input id="email" class="form-control" formControlName="email" placeholder="email" required>
         </div>
   
